--- a/addons/calendar/views/calendar_views.xml
+++ b/addons/calendar/views/calendar_views.xml
@@ -125,25 +125,111 @@
                     </div>
                     <group>
                         <group>
-                            <field name="start_date" string="from" invisible="not allday" readonly="not user_can_edit" required="allday" force_save="1"/>
-                            <field name="stop_date" string="to" invisible="not allday" readonly="not user_can_edit" required="allday" force_save="1"/>
-
-                            <field name="start" string="from" invisible="allday" readonly="not user_can_edit" required="not allday"/>
-                            <field name="stop" string="to" invisible="allday" readonly="not user_can_edit" required="not allday"/>
-                            <label for="duration" invisible="allday"/>
-                            <div invisible="allday">
-                                <field name="duration" widget="float_time" string="Duration" class="oe_inline" readonly="(id and recurrency) or not user_can_edit"/>
-                                <span> hours</span>
+                            <field name="start_date" string="When?" widget="daterange" invisible="not allday" readonly="not user_can_edit" required="allday" options="{'end_date_field': 'stop'}" force_save="1"/>
+                            <field name="start" string="When?" widget="daterange" invisible="allday" readonly="not user_can_edit" required="not allday" options="{'end_date_field': 'stop'}" />
+                            <label for="duration"/>
+                            <div class="d-flex gap-4">
+                                <span invisible="allday">
+                                    <field name="duration" widget="float_time" string="Duration" class="oe_inline" readonly="(id and recurrency) or not user_can_edit"/>
+                                    hours
+                                </span>
+                                <div>
+                                    <field name="allday" force_save="1" readonly="not user_can_edit"/><label for="allday"/>
+                                </div>
                             </div>
-                            <field name="event_tz" invisible="not recurrency" readonly="not user_can_edit"/>
-                            <field name="allday" force_save="1" readonly="not user_can_edit"/>
+                            <div class="d-flex gap-1">
+                                <field name="recurrency" nolabel="1" readonly="not user_can_edit"/>
+                                <label for="recurrency" class="fw-bold"/>
+                            </div>
+                            <div>
+                                <div class="d-flex gap-1"><field name="interval" invisible="not recurrency" class="oe_inline" readonly="not user_can_edit" required="recurrency"/>
+                                    <field name="rrule_type" invisible="not recurrency" readonly="not user_can_edit" required="recurrency"/>
+                                </div>
+                                <div class="d-contents" invisible="not recurrency">
+                                    <widget name="week_days" invisible="rrule_type != 'weekly'" readonly="not user_can_edit" class="o_weekly_table" nolabel="1"/>
+                                    <div invisible="rrule_type != 'monthly'" class="d-contents">
+                                        <div class="o_row">
+                                            <field name="month_by"/>
+                                            <field name="day"
+                                                invisible="month_by != 'date'"
+                                                readonly="not user_can_edit"
+                                                required="month_by == 'date' and rrule_type == 'monthly'"/>
+                                            <field name="byday" string="The"
+                                                invisible="month_by != 'day'"
+                                                readonly="not user_can_edit"
+                                                required="recurrency and month_by == 'day' and rrule_type == 'monthly'"/>
+                                            <field name="weekday" nolabel="1"
+                                                invisible="month_by != 'day'"
+                                                readonly="not user_can_edit"
+                                                required="recurrency and month_by == 'day' and rrule_type == 'monthly'"/>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <field name="location" placeholder="Online Meeting" />
+                            <label for="videocall_location" class="opacity-100"/>
+                            <div>
+                                <field name="videocall_location" string="Videocall URL" widget="CopyClipboardChar" force_save="1" readonly="videocall_source == 'discuss'"/>
+                                <button name="clear_videocall_location" type="object" class="btn btn-link"
+                                    invisible="not videocall_location" context="{'recurrence_update': recurrence_update}">
+                                    <span class="fa fa-times"></span><span> Clear meeting</span>
+                                </button>
+                                <button name="set_discuss_videocall_location" type="object" class="btn btn-link"
+                                    invisible="videocall_location" context="{'recurrence_update': recurrence_update}">
+                                    <span class="fa fa-plus"></span><span> Add Odoo meeting</span>
+                                </button>
+                                <button name="action_join_video_call" class="btn btn-link" help="Join Video Call" type="object" invisible="not videocall_location">
+                                    <span class="oi oi-arrow-right"></span><span> Join video call</span>
+                                </button>
+                            </div>
+                            <field name="videocall_source" invisible="1"/>
+                            <field name="access_token" invisible="1" force_save="1"/>
+                            <field name="categ_ids" widget="many2many_tags" options="{'color_field': 'color', 'no_create_edit': True}"/>
+                            <label for="privacy"/>
+                            <div class="o_row">
+                                <field name="show_as" readonly="not user_can_edit" nolabel="1"/>
+                                <field name="privacy" readonly="not user_can_edit" nolabel="1"/>
+                            </div>
+                            <field name="user_id" widget="many2one_avatar_user" readonly="not user_can_edit"/>
+                            <field name="description" placeholder="Add description"/>
+                            <field name="recurrence_id" invisible="1" />
+                            <!-- Removed in FP excalidraw -->
+                            <!-- <field name="event_tz" invisible="not recurrency" readonly="not user_can_edit"/> -->
                         </group>
                         <group>
-                            <field name="alarm_ids" widget="many2many_tags" options="{'no_quick_create': True}"/>
-                            <field name="categ_ids" widget="many2many_tags" options="{'color_field': 'color', 'no_create_edit': True}"/>
+                            <!-- [TODO] -->
+                            <field name="attending_state"/>
+                            <field name="alarm_ids" placeholder="No reminders" widget="many2many_tags" options="{'no_quick_create': True}"/>
+                            <separator/>
+                            <strong>Attendees</strong>
+                            <div class="o_row" colspan="2">
+                                <div colspan="1">
+                                    <field name="attendees_count" class="w-auto oe_inline" nolabel="1"/> <span invisible="attendees_count > 1 or attendees_count == 0">Attendee</span><span invisible="attendees_count == 1">Attendees</span>
+                                </div>
+                                <div name="send_buttons" class="d-flex gap-1" colspan="1">
+                                    <button name="action_open_composer" help="Send Email to attendees" type="object" string=" EMAIL" icon="fa-envelope"/>
+                                </div>
+                            </div>
+                            <div colspan="2">
+                                <field name="accepted_count" class="w-auto oe_inline" nolabel="1"/> yes,
+                                <field name="tentative_count" class="w-auto oe_inline" nolabel="1"/> maybe,
+                                <field name="declined_count" class="w-auto oe_inline" nolabel="1"/> no,
+                                <field name="awaiting_count" class="w-auto oe_inline" nolabel="1"/> awaiting
+                            </div>
+                            <div colspan="2" class="d-flex align-items-baseline">
+                                <field name="partner_ids" widget="many2manyattendee"
+                                    placeholder="Select attendees..."
+                                    context="{'force_email':True}"
+                                    readonly="not user_can_edit"/>
+                            </div>
+                            <div class="alert alert-warning o_form_header mt-2" invisible="not invalid_email_partner_ids" role="status">
+                                <p><strong>The following attendees have invalid email addresses and won't receive any email notifications:</strong></p>
+                                <field name="invalid_email_partner_ids" widget="many2manyattendee" class="oe_inline"/>
+                            </div>
                         </group>
                     </group>
                     <notebook>
+                    <!--
                         <page name="page_details" string="Information">
                             <group>
                                 <group>
@@ -254,7 +340,7 @@
                                 />
                             </div>
                         </page>
-
+-->
                         <page name="page_invitations" string="Invitations" groups="base.group_no_one" invisible="not user_can_edit">
                             <button name="action_sendmail" type="object" string="Send Invitations" icon="fa-envelope" class="oe_link"/>
                             <field name="attendee_ids" widget="one2many" mode="tree,kanban" readonly="1">
@@ -311,18 +397,18 @@
                     <field name="videocall_source" invisible="1"/>
                     <field name="access_token" invisible="1"/>
                     <div class="o_row">
-                        <h1 class="w-100"><field name="name" nolabel="1" placeholder="Add title" colspan="2"/></h1>
+                        <h1 class="w-100"><field name="name" nolabel="1" placeholder="Add a title" colspan="2"/></h1>
                     </div>
                     <group>
-                        <field name="start_date" string="From" invisible="not allday" required="allday"/>
+                        <field name="start" string="Date" widget="daterange" invisible="allday" required="not allday" options="{'end_date_field': 'stop'}" />
+                        <field name="start_date" string="Date" widget="daterange" invisible="not allday" required="allday" options="{'end_date_field': 'stop_date'}" />
+                        <!-- <field name="stop" invisible="1" /> -->
+                        <!-- <field name="start_date" string="From" invisible="not allday" required="allday"/>
                         <field name="stop_date" string="To" invisible="not allday" required="allday"/>
-                        <field name="start" string="From" invisible="allday" required="not allday" options="{'block': True, 'icon': 'fa fa-users'}"/>
-                        <field name="stop" string="To" invisible="allday"/>
-                    </group>
-                    <group>
+                        <field name="start" string="From" invisible="allday" required="not allday" options="{'block': True, 'icon': 'fa fa-users'}"/> -->
+                        <!-- <field name="stop" string="To" invisible="allday"/> -->
                         <field name="allday"/>
-                    </group>
-                    <group>
+
                         <field name="partner_ids" widget="many2manyattendee"
                             placeholder="Add attendees..."
                             context="{'force_email':True}"
@@ -337,13 +423,13 @@
                             </button>
                             <button name="set_discuss_videocall_location" type="object" class="btn btn-link"
                                 invisible="videocall_location" context="{'recurrence_update': recurrence_update}">
-                                <span class="fa fa-plus"></span><span> Add Odoo meeting</span>
+                                <span class="fa fa-plus"></span><span> Odoo meeting</span>
                             </button>
                             <button name="action_join_video_call" class="btn btn-link" help="Join Video Call" type="object" invisible="not videocall_location">
                                 <span class="oi oi-arrow-right"></span><span> Join video call</span>
                             </button>
                         </div>
-                        <field name="description"/>
+                        <field name="description" placeholder="Describe your meeting"/>
                     </group>
                 </sheet>
             </form>
@@ -360,26 +446,28 @@
                 event_limit="5"
                 quick_add="%(calendar.view_calendar_event_form_quick_create)d"
                 color="partner_ids">
-                <field name="location" invisible="not location" options="{'icon': 'fa fa-map-marker'}"/>
+                <field name="location" invisible="not location" options="{'icon': 'fa fa-fw fa-map-marker text-400'}"/>
                 <field name="attendees_count" invisible="1"/>
                 <field name="accepted_count" invisible="1"/>
                 <field name="declined_count" invisible="1"/>
-                <field name="partner_ids" options="{'block': True, 'icon': 'fa fa-users'}"
+                <field name="partner_ids" options="{'block': True, 'icon': 'fa fa-fw fa-users text-400'}"
                        filters="1" widget="many2manyattendeeexpandable" write_model="calendar.filters"
                        write_field="partner_id" filter_field="partner_checked" avatar_field="avatar_128"
+                       invisible="not partner_ids"
                 />
-                <field name="videocall_location" widget="url" text="Join Video Call" options="{'icon': 'fa fa-lg fa-video-camera'}" invisible="not videocall_location"/>
+                <field name="videocall_location" widget="url" text="Join Video Call" options="{'icon': 'fa fa-fw fa-video-camera text-400'}" invisible="not videocall_location"/>
                 <field name="is_highlighted" invisible="1"/>
                 <field name="is_organizer_alone" invisible="1"/>
                 <field name="display_description" invisible="1"/>
-                <field name="description" invisible="not display_description" options="{'icon': 'fa fa-bars'}"/>
+                <field name="description" invisible="not display_description" options="{'icon': 'fa fa-fw fa-bars text-400'}"/>
                 <field name="privacy" invisible="1"/>
-                <field name="alarm_ids" invisible="not alarm_ids" options="{'icon': 'fa fa-bell-o'}"/>
-                <field name="categ_ids" invisible="not categ_ids" options="{'icon': 'fa fa-tag'}"/>
+                <field name="alarm_ids" invisible="not alarm_ids" options="{'icon': 'fa fa-fw fa-bell text-400'}"/>
+                <field name="categ_ids" invisible="not categ_ids" options="{'color_field': 'color', 'icon': 'fa fa-fw fa-tag text-400'}"/>
                 <!-- For recurrence update Dialog -->
                 <field name="recurrency" invisible="1"/>
                 <field name="recurrence_update" invisible="1"/>
-                <field name="partner_id" string="Organizer" options="{'icon': 'fa fa-user-o'}"/>
+                <field name="partner_id" string="Organizer" options="{'icon': 'fa fa-fw fa-user text-400'}"
+                        invisible="not partner_id"/>
             </calendar>
         </field>
     </record>
