--- a/addons/event/views/event_event_views.xml
+++ b/addons/event/views/event_event_views.xml
@@ -146,7 +146,7 @@
             <form>
                 <group>
                     <field name="name" placeholder="e.g. Conference for Architects"/>
-                    <field name="date_begin" string="Date" widget="daterange" options="{'end_date_field': 'date_end'}" />
+                    <field name="date_begin" string="Date" widget="daterange" options="{'end_date_field': 'date_end'}" class="w-auto" />
                     <field name="date_end" invisible="1" />
                 </group>
             </form>
