--- a/addons/web/static/src/views/calendar/calendar_controller.scss
+++ b/addons/web/static/src/views/calendar/calendar_controller.scss
@@ -1,5 +1,5 @@
 // Variables
-$o-cw-color-today-accent: #fe3b30;
+$o-cw-color-today-accent: #714B67;
 $o-cw-filter-avatar-size: 20px;
 
 // Animations
@@ -23,7 +23,7 @@ $o-cw-filter-avatar-size: 20px;
     @include o-webclient-padding($top: $o-horizontal-padding/2);
     background-color: $o-view-background-color;
     border-right: 1px solid $border-color;
-    overflow-y: auto;
+    overflow-y: scroll; // always show scroll to prevent resizing of the datepicker on changing calendar type
     width: 240px;
     @include media-breakpoint-up(xl){
         width: 280px;
