--- a/addons/web/static/src/views/calendar/calendar_renderer.scss
+++ b/addons/web/static/src/views/calendar/calendar_renderer.scss
@@ -3,58 +3,68 @@
     flex: 1 1 auto;
     min-width: 0;
     height: 100%;
-    background-color: map-get($grays, "100");
-    background: linear-gradient(-45deg, map-get($grays, "100"), $o-view-background-color);
+    background-color: $o-view-background-color;
 
     .fc-event {
-        margin: 0 1px;
-        border-style: solid;
-        border-width: 0 0 0 3px;
-        box-sizing: border-box;
-        overflow: hidden;
-        background: none;
-        font-size: 11px;
-        line-height: 1;
+        --o-bg-opacity: 0;
+        // `web/lib/fullcalendar/core/main.css` gives events with links and draggable events a hand mouse pointer,
+        // but doesn't take into account that events have popovers.
+        cursor: pointer;
 
-        &:not([href]):not([tabindex]) {
-            color: $body-color;
+        &:hover, &.fc-mirror{
+            --o-bg-opacity: .3;
         }
+    //     margin: 0 1px;
+    //     border-style: solid;
+    //     border-width: 0 0 0 3px;
+    //     box-sizing: border-box;
+    //     overflow: hidden;
+    //     background: none;
+    //     font-size: 11px;
+    //     line-height: 1;
 
-        &.fc-dragging.fc-day-grid-event.dayGridMonth .fc-content {
-            @include text-truncate();
-            margin: 4px 4px 3px;
-        }
+    //     &:not([href]):not([tabindex]) {
+    //         color: $body-color;
+    //     }
 
-        .fc-bg {
-            background-color: mix(
-                map-get($theme-colors, "primary"),
-                white
-            ); // Used for placeholder events only (on creation)
-            width: 101%;
-            height: 101%; // Compensate border
-            opacity: 0.7;
-            transition: opacity 0.2s;
-        }
+    //     &.fc-dragging.fc-day-grid-event.dayGridMonth {
+    //         $o-event-bg-color: rgba($o-action, 0.25);
+    //         border-color: $o-action;
+    //         .fc-content {
+    //             @include text-truncate();
+    //             // margin: 4px 4px 3px;
+    //         }
+    //     }
+    .fc-bg {
+        background-color: $o-view-background-color !important;
+        opacity: var(--o-bg-opacity);
+    }
+
+
+
+    //     .fc-bg {
+    //         // background-color: rgba($o-action, 0.25); // Used for placeholder events only (on creation)
+    //         width: 101%;
+    //         height: 101%; // Compensate border
+    //         transition: $transition-fade;
+    //     }
 
         .fc-content {
-            white-space: normal;
-            margin: 0.25rem;
-            font-size: 1.1em;
-            font-weight: 500;
+    //         white-space: normal;
+               margin: 0 map-get($spacers, 1);
+    //         font-size: $o-font-size-base-smaller;
+    //         line-height: $font-size-base;
+    //         font-weight: 500;
         }
 
-        // Try to show one full lien for short event
-        &.fc-short .fc-content {
-            margin-top: 1px;
-        }
+    //     // Try to show one full lien for short event
+    //     &.fc-short .fc-content {
+    //         margin-top: 1px;
+    //     }
 
-        &.o_cw_custom_highlight {
-            z-index: 10 !important;
-
-            .fc-bg {
-                opacity: 0.95;
-            }
-        }
+    //     &.o_cw_custom_highlight {
+    //         z-index: 10 !important;
+    //     }
     }
 
     .o_calendar_widget {
@@ -68,33 +78,49 @@
         // =====================================
 
         td {
-            border-color: $border-color;
+            border-color: lighten($border-color, 5%);
         }
 
         .fc-time-grid .fc-slats .fc-minor td {
-            border-top-color: map-get($grays, "400");
+            border-top-color: lighten($border-color, 5%);
         }
-
-        .fc-widget-content {
-            border-left-color: transparent;
-        }
-
         .fc-widget-header {
-            border-color: transparent;
-            border-bottom-color: $border-color;
-            padding: 3px 0 5px;
+            border-right: transparent;
+        }
 
-            // The left padding must be equal to that of '.fc-axis.fc-time'
-            // This realigns the headers with their cells
+        .fc-head-container {
+            border-top: transparent;
+            border-left: transparent;
+            padding: map-get($spacers, 2) 0;
+
             .fc-week-number {
-                padding-left: 4px;
+                border: transparent;
+                text-align: center;
+
+                &> span {
+                    display: inline-block;
+                    border-radius: $border-radius;
+                    padding: 0 map-get($spacers, 1);
+                    background-color: $gray-200;
+                    font-size: $o-font-size-base-smaller;
+                }
             }
+        }
+
+        .fc-day-header {
+            border-color: transparent;
+            margin-bottom: map-get($spacers, 1);
+            // border-bottom-color: lighten($border-color, 5%);
         }
 
         hr.fc-widget-header {
             padding: 1px;
             border: 0;
             background: map-get($grays, "400");
+        }
+
+        .fc-widget-content:not(.fc-today) {
+            border-left-color: transparent;
         }
 
         .fc-timeGrid-view .fc-day-grid .fc-row .fc-content-skeleton {
@@ -119,8 +145,14 @@
             }
         }
 
+        .fc-event.fc-dragging {
+            background-color: $o-action;
+            border-color: $o-action;
+
+        }
+
         .o_calendar_disabled {
-            background-color: $gray-200;
+            background-color: rgba($gray-200, .5);
         }
 
         // ======  Specific agenda types ======
@@ -129,19 +161,17 @@
         // ====== Both Day and Week agenda
         .fc-timeGridDay-view,
         .fc-timeGridWeek-view {
-            .fc-axis {
-                padding-right: $o-horizontal-padding;
-            }
-
-            .fc-widget-header.fc-today {
+            .fc-widget-header.fc-today span {
+                display: inline-block;
                 border-radius: 25px;
-                background: $o-brand-odoo;
-                color: white;
+                background: $primary;
+                padding: 0 map-get($spacers, 2);
+                color: $o-view-background-color;
             }
 
             // Reinfornce default border color
             tbody td {
-                border-top-color: map-get($grays, "400");
+                border-top-color: lighten($border-color, 5%);
             }
 
             // Remove dotted borders (half-hours)
@@ -154,8 +184,8 @@
                 border-top-color: transparent;
 
                 span {
-                    max-width: 45px;
-                    margin-top: -19px;
+                    max-width: 7ch;
+                    margin-top: -22px;
                     position: relative;
                     display: block;
                 }
@@ -170,9 +200,9 @@
             // Row containing "all day" events
             div.fc-day-grid {
                 background-color: $o-view-background-color;
-                box-shadow: 0 6px 12px -6px rgba(black, 0.16);
-                border-left-color: rgba($o-brand-odoo, 0.3);
-                border-right-color: rgba($o-brand-odoo, 0.3);
+                box-shadow: 0 6px 12px -6px rgba($gray-900, 0.16);
+                // border-left-color: rgba($primary, 0.3);
+                // border-right-color: rgba($primary, 0.3);
 
                 + hr.fc-widget-header {
                     padding: 1px 0 0;
@@ -184,23 +214,23 @@
                 }
             }
 
-            // Create a 'preudo-border' for the first row. The actual border
-            // it's hidden because of border-collapse settings.
+            // Create a 'pseudo-border' for the first row. The actual border
+            // is hidden because of border-collapse settings.
             .fc-slats tr:first-child td.fc-widget-content:last-child {
-                box-shadow: inset 0 1px 0 map-get($grays, "400");
+                box-shadow: inset 0 1px 0 lighten($border-color, 5%);
             }
 
             .fc-day.fc-widget-content.fc-today:not(.o_calendar_disabled) {
-                border-left-color: rgba($o-brand-odoo, 0.3);
-                border-right-color: rgba($o-brand-odoo, 0.3);
+                border-left-color: rgba($primary, 0.3);
+                border-right-color: rgba($primary, 0.3);
                 background: $o-view-background-color;
             }
 
             .fc-event {
                 // Prevent events with similar color to visually overlap each other
-                box-shadow: 0 0 0 1px white;
+                box-shadow: 0 0 0 1px $o-view-background-color;
 
-                &.fc-event:not(.fc-h-event):not(.o_event_oneliner) {
+                &:not(.fc-h-event):not(.o_event_oneliner) {
                     border-width: 3px 0 0;
 
                     &.fc-not-start {
@@ -211,22 +241,23 @@
                         }
                     }
                 }
-
-                &.o_event_oneliner {
-                    padding-top: 0;
-                    padding-bottom: 0;
-                    .fc-content {
-                        margin-top: 0;
-                        font-size: 11px !important;
-                        line-height: 0.9;
-                    }
-                }
             }
 
-            // Reset position to keep the "nowIndicator" line visible
-            .fc-content-col {
-                position: initial;
-            }
+        //         &.o_event_oneliner {
+        //             padding-top: 0;
+        //             padding-bottom: 0;
+        //             .fc-content {
+        //                 margin-top: 0;
+        //                 font-size: 11px !important;
+        //                 line-height: 0.9;
+        //             }
+        //         }
+        //     }
+
+        //     // Reset position to keep the "nowIndicator" line visible
+        //     .fc-content-col {
+        //         position: initial;
+        //     }
         }
 
         // ====== Both Month and Year agenda
@@ -239,7 +270,7 @@
                 // Realigns the background color and the number
                 padding-bottom: 0;
 
-                .fc-day-number {
+                .fc-day-top .fc-day-number {
                     position: relative;
                     padding: var(--o-circle-padding);
                     color: var(--o-cw-color);
@@ -270,132 +301,114 @@
         }
 
         // ====== Day only
-        .fc-timeGridDay-view .fc-event {
-            padding: 10px;
-            font-size: 14px;
+        // .fc-timeGridDay-view .fc-event {
+        //     font-size: 14px;
 
-            // Try to avoid showing no title for short event
-            &.fc-short {
-                padding-top: 0;
-                padding-bottom: 0;
-            }
+        //     // Try to avoid showing no title for short event
+        //     &.fc-short {
+        //         padding-top: 0;
+        //         padding-bottom: 0;
+        //     }
 
-            .fc-content {
-                margin-top: 1px !important;
-            }
-        }
+        //     // .fc-content {
+        //         // margin-top: 1px !important;
+        //     // }
+        // }
 
         // ====== Week only
         .fc-timeGridWeek-view {
             // Expand tiny events on hover/select
-            .fc-event:not(.fc-h-event).o_cw_custom_highlight {
-                transition: margin 0.1s 0.3s, left 0.1s 0.3s, right 0.1s 0.3s;
-                margin: 0 !important;
-                right: 1px !important;
-                left: 1px !important;
-            }
+            // .fc-event:not(.fc-h-event).o_cw_custom_highlight {
+            //     transition: $transition-base;
+            //     margin: 0 !important;
+            //     right: 1px !important;
+            //     left: 1px !important;
+            // }
         }
 
         // ====== Month only
         .fc-dayGridMonth-view {
             margin-right: $o-horizontal-padding;
-            border-right: 1px solid $border-color;
+            // border-right: 1px solid $border-color;
+                // .fc-widget-header {
+                //         padding: 3px 0;
+                //     }
 
-            .fc-event {
-                border-radius: 25px;
-            }
-
-            .fc-widget-header {
-                padding: 3px 0;
-            }
-
-            .fc-week-number {
+            .fc-week-number span{
                 background: none;
-                padding: 0.1rem 0.3rem 0.1rem 0 !important;
-                line-height: 1;
+                padding: (map-get($spacers, 1) / 2) 0 !important;
+                line-height: $line-height-sm;
+                opacity: .8;
             }
+
             .fc-day-top {
                 text-align: center;
-                padding-top: 3px;
-                padding-bottom: 3px;
+                padding-top: map-get($spacers, 1) / 2;
+                padding-bottom: map-get($spacers, 1) / 2;
+
+                &.fc-other-month {
+                    opacity: 0.8;
+
+                    &:not(.fc-today) .fc-day-number {
+                        color: map-get($grays, "500");
+                    }
+                }
+
                 .fc-day-number {
+                    color: map-get($grays, "900");
                     float: none !important;
                 }
+
             }
 
-            .fc-day-number {
-                margin: 5px;
-                padding: 0.1rem 0.3rem 0.1rem 0;
-                color: map-get($grays, "900");
-                font-weight: 400;
-                line-height: 1;
-                float: none !important;
-            }
-
-            .fc-day-top.fc-other-month {
-                opacity: 0.8;
-
-                .fc-day-number {
-                    color: map-get($grays, "500");
-                }
-            }
-
-            td:last-child {
-                border-right-color: transparent;
-            }
-
-            .fc-bg .fc-today {
-                border-color: map-get($grays, "300");
-            }
             .fc-bg .fc-today:not(.o_calendar_disabled) {
-                background: $o-view-background-color;
+                background: none;
             }
 
             .fc-more-cell {
                 > div,
                 .fc-more {
-                    height: 100%;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
+                    text-align: center;
+                    // height: 100%;
+                    // display: flex;
+                    // align-items: center;
+                    // justify-content: center;
                 }
             }
-
             .fc-event {
                 margin: 0 3px 2px;
-
                 .fc-content {
                     display: flex;
                     justify-content: start;
                     flex-direction: row;
-                    margin: 4px 4px 3px;
                 }
 
-                .fc-time:not(:empty) {
-                    /*rtl:ignore*/
-                    padding-right: 0.5em;
-                }
+                // .o_event_title {
+                //     @include text-truncate();
+                // }
 
-                .o_event_title {
-                    @include text-truncate();
-                }
+                // &.fc-not-start {
+                //     border-right-width: 3px;
 
-                &.fc-not-start {
-                    border-right-width: 3px;
+                //     .fc-content {
+                //         padding-left: 6px;
+                //     }
+                // }
 
-                    .fc-content {
-                        padding-left: 6px;
-                    }
-                }
+                // &.fc-not-end {
+                //     margin-right: 0;
 
-                &.fc-not-end {
-                    margin-right: 0;
-
-                    .fc-content {
-                        padding-right: 6px;
-                    }
-                }
+                //     .fc-content {
+                //         padding-right: 6px;
+                //     }
+                // }
             }
+            // td:last-child {
+            //     border-right-color: transparent;
+            // }
+            // .fc-bg .fc-today {
+            //     border-color: map-get($grays, "300");
+            // }
         }
         // ====== Year only
         .fc-dayGridYear-view {
@@ -479,7 +492,7 @@
                     }
 
                     .fc-dayGridMonth-view {
-                        margin-right: none;
+                        margin-right: 0;
                         border-right: none;
 
                         .fc-has-event {
@@ -556,29 +569,25 @@
 
     .o_calendar_renderer .fc-view {
         .o_calendar_color_#{$i - 1} {
-            border-color: $color;
             &.fc-bgevent {
                 background-color: $color;
                 opacity: 0.5;
             }
-            &.fc-event {
-                color: darken($color, 45%);
+            &.fc-event:not(.fc-dragging) {
+                color: mix($color, color-contrast(tint-color($color, 50%)), 50%);
                 opacity: 1;
-                background: scale-color($color, $lightness: 50%);
-                .fc-bg {
-                    background: scale-color($color, $lightness: 50%);
-                }
+                border-color: tint-color($color, 50%);
+                background-color: tint-color($color, 50%);
 
-                &.o_event_highlight {
-                    opacity: 1;
-                    .fc-content {
-                        font-weight: bold;
-                    }
-                }
+                // &.o_event_highlight {
+                //     opacity: 1;
+                //     .fc-content {
+                //         font-weight: bold;
+                //     }
+                // }
 
-                &.o_cw_custom_highlight {
-                    box-shadow: 0 12px 12px -5px rgba($color, 0.3);
-                    color: color-contrast($color);
+                &.o_calendar_popover_open.o_cw_custom_highlight {
+                    box-shadow: 6px 12px 12px -5px rgba(mix($color, color-contrast(tint-color($color, 50%)), 50%), 0.5);
                     z-index: 10 !important;
                     opacity: 1;
                     right: 1px !important;
@@ -587,31 +596,11 @@
                 }
             }
 
-            &.o_event_hatched {
-                background: repeating-linear-gradient(
-                    45deg,
-                    $color,
-                    $color 10px,
-                    rgba($color, 0.4) 10px,
-                    rgba($color, 0.4) 20px
-                ) !important;
-
-                .fc-bg {
-                    background: repeating-linear-gradient(
-                        45deg,
-                        $color,
-                        $color 10px,
-                        rgba($color, 0.5) 10px,
-                        rgba($color, 0.5) 20px
-                    );
-                }
-            }
-
             &.o_event_striked {
                 background: linear-gradient(
-                    transparent 0 45%,
+                    rgba($color, .1) 0 45%,
                     $color 45% 55%,
-                    transparent 55% 100%);
+                    rgba($color, .1) 55% 100%);
             }
         }
     }
