--- a/addons/web/static/src/views/calendar/calendar_year/calendar_year_popover.scss
+++ b/addons/web/static/src/views/calendar/calendar_year/calendar_year_popover.scss
@@ -1,14 +1,28 @@
 .o_cw_popover_link {
-    border: solid 2px;
-    padding-left: 5px;
+    // border: solid 2px;
+    // padding-left: 5px;
     margin-top: 2px;
-    color: black;
+
     @for $i from 1 through length($o-colors-complete) {
         $color: nth($o-colors-complete, $i);
 
         &.o_calendar_color_#{$i - 1} {
-            border-color: $color;
-            background: $color;
+            color: mix($color, color-contrast(tint-color($color, 50%)), 75%);
+            font-weight: $font-weight-normal;
+            border-radius: $border-radius;
+            padding: 0 map-get($spacers, 1);
+
+            &:hover {
+                background-color: tint-color($color, 80%);
+            }
+
+            &:before {
+                content: '\f111';
+                margin-right: map-get($spacers, 1);
+                font-family: FontAwesome;
+                font-size: $o-font-size-base-smaller;
+                color: $color;
+            }
         }
     }
 }
