[IMP] Dropdown unification - Usages tests fixing

--- a/addons/web/static/src/search/cog_menu/cog_menu.scss
+++ b/addons/web/static/src/search/cog_menu/cog_menu.scss
@@ -4,6 +4,10 @@
         vertical-align: -0.2em;
     }
 
+    .o-dropdown {
+        min-width: 5px;
+    }
+
     .dropdown-item:not(.focus) > .o_cp_action_app_icon {
         // Temporary workaround until we'll support inline SVGs icons
         // globally (eg. Spreadsheet's toolbar icons)
