--- a/addons/website_sale_comparison/static/src/scss/website_sale_comparison.scss
+++ b/addons/website_sale_comparison/static/src/scss/website_sale_comparison.scss
@@ -57,9 +57,8 @@
 
 // Specifications
 #product_full_spec {
-    border-top: 1px solid map-get($grays, '400');
 
-    .o_add_compare_dyn {
-        font-size: 1.1rem;
+    .o_table_title {
+        padding-block-start: $spacer * 0.75;
     }
 }
