--- a/addons/website_sale_comparison/views/website_sale_comparison_template.xml
+++ b/addons/website_sale_comparison/views/website_sale_comparison_template.xml
@@ -14,31 +14,27 @@
         <xpath expr="//div[@id='product_full_description']" position="after">
             <t t-set="categories" t-value="product.valid_product_template_attribute_line_ids._prepare_categories_for_display()"/>
             <t t-if="categories">
-                <section class="pt32 pb32" id="product_full_spec">
+                <section class="pt32 pb32 border-top" id="product_full_spec">
                     <div class="container">
                         <div class="d-flex justify-content-between align-items-center mb-4">
-                            <h3 class="m-0">Specifications</h3>
+                            <h3 class="my-2">Specifications</h3>
                             <t t-if="is_view_active('website_sale_comparison.add_to_compare')">
                                 <t t-set="product_variant" t-value="product_variant or product._create_first_product_variant()"/>
-                                <button t-if="product_variant" type="button" role="button" class="d-none d-md-block btn btn-link px-0 o_add_compare_dyn" aria-label="Compare" t-att-data-product-product-id="product_variant.id" data-action="o_comparelist"><span class="fa fa-exchange me-2"></span>Compare</button>
+                                <button t-if="product_variant" type="button" role="button" class="o_add_compare_dyn d-none d-md-block btn btn-link px-0 fs-5" aria-label="Compare" t-att-data-product-product-id="product_variant.id" data-action="o_comparelist"><span class="fa fa-exchange me-2"></span>Compare</button>
                             </t>
                         </div>
                         <div id="product_specifications">
                             <div class="row">
                                 <t t-foreach="categories" t-as="category">
-                                    <div class="col-lg-6">
-                                        <table class="table">
-                                            <t t-if="len(categories) > 1">
-                                                <tr>
-                                                    <th class="text-start" t-att-colspan="2">
-                                                        <span t-if="category" t-field="category.name"/>
-                                                        <span t-else="">Uncategorized</span>
-                                                    </th>
-                                                </tr>
-                                            </t>
+                                    <h5 class="o_table_title col-12 col-lg-2 text-lg-end pe-lg-3">
+                                        <t t-if="category" t-out="category.name"/>
+                                        <t t-else="">Uncategorized</t>
+                                    </h5>
+                                    <div class="col-12 col-lg-10">
+                                        <table t-attf-class="table table-striped {{'mb32' if not category_last else ''}}">
                                             <tr t-foreach="categories[category].filtered(lambda l: len(l.value_ids) > 1)" t-as="ptal">
-                                                <td class="w-25"><span t-field="ptal.attribute_id.name"/></td>
-                                                <td class="w-75 text-muted">
+                                                <td class="w-25 border-top"><span t-field="ptal.attribute_id.name"/></td>
+                                                <td class="w-75 border-top text-muted">
                                                     <t t-foreach="ptal.value_ids" t-as="pav">
                                                         <span t-field="pav.name"/><t t-if="not pav_last"> or</t>
                                                     </t>
