[IMP] web,*: remove legacy o_field_many2manytags class & styles
task-3439226

--- a/addons/web/static/src/legacy/scss/fields.scss
+++ b/addons/web/static/src/legacy/scss/fields.scss
@@ -98,7 +98,7 @@
     }
 
     // Flex fields (inline)
-    &.o_field_many2one, &.o_field_radio, &.o_field_many2manytags, &.o_field_percent_pie, &.o_field_monetary, &.o_field_binary_file, &.o_field_float_percentage {
+    &.o_field_many2one, &.o_field_radio, &.o_field_percent_pie, &.o_field_monetary, &.o_field_binary_file, &.o_field_float_percentage {
         display: inline-flex;
         > span, > button {
             flex: 0 0 auto;
@@ -151,151 +151,6 @@
     .o_external_button {
         padding-top: 0;
         padding-bottom: 0;
-    }
-
-    // Many2many tags
-    &.o_field_many2manytags {
-        flex-flow: row wrap;
-        align-items: stretch;
-        max-width: 100%;
-
-        > .o_field_widget {
-            flex: 1 0 100px;
-            position: initial;
-            max-width: 100%;
-        }
-
-        .o_field_many2one_selection, .o_input {
-            height: 100%;
-        }
-
-        .badge {
-            flex: 0 0 auto;
-            margin: 1px 2px 1px 0;
-            border: 0;
-            font-size: 12px;
-            user-select: none;
-            display: flex;
-            max-width: 100%;
-
-            &.dropdown {
-                cursor: pointer;
-            }
-
-            a {
-                color: inherit;
-            }
-
-            .o_badge_text {
-                @include o-text-overflow(inline-block);
-                max-width: 200px;
-                color: inherit;
-                line-height: 1.1;
-            }
-
-            .o_delete {
-                color: inherit;
-                cursor: pointer;
-                padding-left: 4px;
-            }
-        }
-
-        // o-kanban-colorpicker without customizing
-        // '&:first-child > a::before' (transparent red-crossed colorpick)
-        @mixin o-tag-colorpicker {
-            $o-tag-colorpicker-padding-right: $o-dropdown-hpadding - 2 * 5px; // FIXME was $o-kanban-inner-hmargin before scss convertion
-
-            max-width: 100%;
-            padding: 3px $o-tag-colorpicker-padding-right 3px $o-dropdown-hpadding;
-
-            > li {
-                display: inline-block;
-                margin: 5px 5px 0 0; // FIXME was $o-kanban-inner-hmargin before scss convertion
-                border: 1px solid white;
-                box-shadow: 0 0 0 1px map-get($grays, '300');
-
-                > a {
-                    display: block;
-
-                    &::after {
-                        content: "";
-                        display: block;
-                        width: 20px;
-                        height: 15px;
-                    }
-                }
-
-                &:last-of-type {
-                    box-shadow: 0 0 0 0px white; // remove grey border on hide in kanban
-                    color: $o-main-text-color;
-                }
-            }
-        }
-
-        .tagcolor_dropdown_menu {
-            min-width: 150px; // down from 160px of .dropdown-menu
-            margin-right: 0px; // cancel right margin of .dropdown-menu
-        }
-
-        .o_colorpicker > ul {
-            @include o-tag-colorpicker;
-            white-space: normal;
-            li > .o_hide_in_kanban label {
-                line-height: $o-line-height-base;
-            }
-        }
-
-        .o_tag_error {
-            box-shadow: inset 0 0 0 2px #FF0000;
-
-            .o_delete {
-                color: #FF0000;
-            }
-        }
-        // Many2many tags avatar
-        &.avatar {
-            .badge {
-                align-items: center;
-                padding: 0;
-                padding-right: 0.6rem;
-
-                img {
-                    height: 1.4em;
-                    width: 1.4em;
-                    object-fit: cover;
-                }
-
-                .o_badge_text, .o_delete {
-                    padding-top: 0.25em;
-                    padding-bottom: 0.25em;
-                }
-
-                .o_tag_badge_text {
-                    padding-left:2px;
-                }
-            }
-        }
-        &.o_field_many2manytags_multi {
-            margin-bottom: 0px;
-            > span {
-                display: inline-block;
-            }
-            .o_m2m_avatar, .o_m2m_avatar_empty {
-                width: 20px;
-                height: 20px;
-                margin-left: 0px;
-            }
-            .o_m2m_avatar_empty {
-                background-color: #dee2e6;
-                vertical-align: bottom;
-            }
-            &.avatar.o_clickable_m2x_avatar {
-                img.o_m2m_avatar {
-                    margin-right: 0px;
-                    object-fit: cover;
-                }
-            }
-        }
     }
 
     // Stars
