--- a/addons/payment/views/payment_form_templates.xml
+++ b/addons/payment/views/payment_form_templates.xml
@@ -18,6 +18,7 @@
             - amount: The amount to pay.
             - currency: The currency of the payment, as a `res.currency` record.
             - partner_id: The id of the partner on behalf of whom the payment should be made.
+            - providers_sudo: The compatible providers, as a sudoed `payment.provider` recordset.
             - payment_methods_sudo: The compatible payment methods, as a sudoed `payment.method`
                                     recordset.
             - tokens_sudo: The available payment tokens, as a sudoed `payment.token` recordset.
@@ -39,7 +40,9 @@
                     and len(payment_methods_sudo) == 1
                     and payment_methods_sudo[:1].id"
         />
-        <t t-set="collapse_payment_methods" t-value="tokens_sudo and allow_token_selection"/>
+        <t t-set="collapse_payment_methods"
+           t-value="tokens_sudo and allow_token_selection and payment_methods_sudo"
+        />
         <t t-set="display_submit_button"
            t-value="True if display_submit_button is None else display_submit_button"
         />
@@ -86,7 +89,8 @@
                     </ul>
                 </div>
                 <!-- === Payment methods === -->
-                <div id="o_payment_methods"
+                <div t-if="payment_methods_sudo"
+                     id="o_payment_methods"
                      t-att-class="'collapse' if collapse_payment_methods else ''"
                 >
                     <!-- === Header === -->
@@ -172,7 +176,7 @@
                                             + (' d-none' if not allow_token_selection else '')"
                                data-payment-option-type="token"
                                t-att-data-payment-option-id="token_sudo.id"
-                               t-att-data-provider-code="token_sudo.provider_code"
+                               t-att-data-provider-code="token_sudo.provider_id._get_code()"
                                t-att-data-provider-id="token_sudo.provider_id.id"
                         />
                         <div class="d-flex align-items-center flex-wrap gap-2">
@@ -248,10 +252,12 @@
             - pm_sudo: The payment method to display, as a sudoed `payment.method` recordset.
             - is_selected: Whether the radio button of the payment method should be checked.
         -->
-        <t t-set="provider_sudo" t-value="pm_sudo.provider_ids[:1]"/>
+        <t t-set="provider_sudo"
+           t-value="pm_sudo.provider_ids.filtered(lambda p: p in providers_sudo)[:1]"
+        />
         <t t-set="is_test" t-value="provider_sudo.state == 'test'"/>
         <t t-set="is_unpublished" t-value="not provider_sudo.is_published"/>
-        <t t-set="pms_to_display_sudo" t-value="pm_sudo.child_payment_method_ids or pm_sudo"/>
+        <t t-set="pms_to_display_sudo" t-value="pm_sudo.brand_ids or pm_sudo"/>
         <t t-set="inline_form_xml_id" t-value="provider_sudo.inline_form_view_id.xml_id"/>
         <div class="d-flex flex-wrap justify-content-between align-items-center gap-2 mb-0 p-0"
              for="o_payment_radio"
@@ -268,7 +274,7 @@
                            t-att-data-payment-option-id="pm_sudo.id"
                            t-att-data-payment-method-code="pm_sudo.code"
                            t-att-data-provider-id="provider_sudo.id"
-                           t-att-data-provider-code="provider_sudo.code"
+                           t-att-data-provider-code="provider_sudo._get_code()"
                            t-att-data-provider-state="provider_sudo.state"
                     />
                     <div class="d-flex gap-2 flex-grow-1 me-auto">
@@ -325,11 +331,13 @@
                         gap-2 mt-2"
             >
                 <!-- === Tokenization checkbox === -->
-                <div t-if="mode == 'payment'"
+                <div t-if="mode == 'payment'
+                           and pm_sudo.support_tokenization
+                           and show_tokenize_input_mapping[provider_sudo.id]"
                      name="o_payment_tokenize_container"
                      class="o-checkbox form-check m-0"
                 >
-                    <label t-if="show_tokenize_input_mapping[provider_sudo.id]">
+                    <label>
                         <input name="o_payment_tokenize_checkbox"
                                type="checkbox"
                                class="form-check-input"
