--- a/addons/payment/views/payment_method_views.xml
+++ b/addons/payment/views/payment_method_views.xml
@@ -7,19 +7,26 @@
         <field name="arch" type="xml">
             <form string="Payment Method">
                 <sheet>
+                    <field name="is_primary" invisible="True"/>
                     <field name="image" widget="image" class="oe_avatar"/>
                     <div class="oe_title">
                         <h1><field name="name" placeholder="Name"/></h1>
                     </div>
                     <group>
-                        <field name="parent_id"/>
+                        <field name="code" groups="base.group_no_one"/>
+                        <field name="primary_payment_method_id" invisible="is_primary"/>
                     </group>
                     <notebook>
-                        <page string="Providers list" name="providers">
-                            <field nolabel="1" name="provider_ids"/>
+                        <page string="Brands" name="brands" invisible="not is_primary">
+                            <field name="brand_ids"/>
                         </page>
-                        <page string="Child pms list (to rename)" name="child_pms">
-                            <field nolabel="1" name="child_payment_method_ids"/>
+                        <page string="Supported By" name="providers" groups="base.group_no_one">
+                            <field name="provider_ids">
+                                <tree decoration-muted="state == 'disabled'">
+                                    <field name="name"/>
+                                    <field name="state"/>
+                                </tree>
+                            </field>
                         </page>
                     </notebook>
                 </sheet>
@@ -31,10 +38,12 @@
         <field name="name">payment.method.tree</field>
         <field name="model">payment.method</field>
         <field name="arch" type="xml">
-            <tree>
+            <tree decoration-muted="not active">
                 <field name="sequence" widget="handle"/>
                 <field name="name"/>
-                <field name="child_payment_method_ids" widget="many2many_tags"/>
+                <field name="supported_country_ids" optional="hidden" widget="many2many_tags"/>
+                <field name="supported_currency_ids" optional="hidden" widget="many2many_tags"/>
+                <field name="active" widget="boolean_toggle"/>
             </tree>
         </field>
     </record>
@@ -45,10 +54,6 @@
         <field name="arch" type="xml">
             <search>
                 <field name="name" string="Name"/>
-                <filter string="Parent only (to rename)"
-                        name="filter_parent"
-                        domain="[('parent_id', '=', False)]"
-                />
             </search>
         </field>
     </record>
@@ -56,8 +61,9 @@
     <record id="action_payment_method" model="ir.actions.act_window">
         <field name="name">Payment Methods</field>
         <field name="res_model">payment.method</field>
-        <field name="view_mode">tree,form</field>
-        <field name="context">{'search_default_filter_parent': 1}</field>
+        <field name="view_mode">tree,kanban,form</field>
+        <field name="domain">[('is_primary', '=', True)]</field>
+        <field name="context">{'active_test': False}</field>
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">
                 Create a payment method
