[IMP] website: use dedicated templates in configurator
This commit adapts the configurator so that the pages it generates are
composed of the primary templates generated from the manifest by the
previous commit.

It also contains a few hard-coded records which have configurator
specialization in some themes while not being listed in their theme's
manifest.

task-3381714

--- a/addons/website/views/website_views.xml
+++ b/addons/website/views/website_views.xml
@@ -412,5 +412,17 @@
             <field name="name">Start Website Configurator</field>
             <field name="action_id" ref="action_open_website_configurator"/>
         </record>
+
+        <!-- TODO Have those blocks used in some theme's snippets_list -->
+        <!-- Missing base configurator templates -->
+        <!-- Defined by Anelusia but not in snippets_list -->
+        <template id="configurator_s_showcase" inherit_id="s_showcase" primary="True"><t/></template>
+        <!-- Defined by Buzzy but not in snippets_list -->
+        <template id="configurator_s_process_steps" inherit_id="s_process_steps" primary="True"><t/></template>
+        <!-- Defined by Notes but not in snippets_list -->
+        <template id="configurator_s_features_grid" inherit_id="s_features_grid" primary="True"><t/></template>
+        <!-- Defined by Yes but not in snippets_list -->
+        <template id="configurator_s_image_gallery" inherit_id="s_image_gallery" primary="True"><t/></template>
+
     </data>
 </odoo>
