[WIP] theme_default, website: previews of non drawn blocks

--- a/addons/theme_default/views/new_page_templates.xml
+++ b/addons/theme_default/views/new_page_templates.xml
@@ -12,11 +12,12 @@
         <div class="o_we_shape o_web_editor_Origins_18 o_we_animated"/>
     </xpath>
 </template>
-<!--
-<template id="new_page_template_about_0" inherit_id="website.new_page_template_sections_about_0">
-    <xpath expr="//t[@t-snippet-call='website.new_page_template_about_0_s_text_block']" position="attributes">
-        <attribute name="t-snippet-call">theme_default.new_page_template_about_0_s_text_block</attribute>
+
+<template id="new_page_template_about_1" inherit_id="website.new_page_template_sections_about_1">
+    <xpath expr="//t[@t-snippet-call='website.new_page_template_about_1_s_picture']" position="before">
+        <t t-snippet-call="website.new_page_template_about_1_s_table_of_content"/>
+        <t t-snippet-call="website.new_page_template_about_1_s_countdown"/>
     </xpath>
 </template>
--->
+
 </odoo>
