[FIX] web: properly split legacy modal .o_subtitle CSS rules
task-3439226

--- a/addons/web/static/src/core/dialog/dialog.scss
+++ b/addons/web/static/src/core/dialog/dialog.scss
@@ -51,7 +51,7 @@
                     .modal-header {
                         background: $o-navbar-background;
 
-                        .modal-title, .o_subtitle, button.close {
+                        .modal-title, button.close {
                             color: $o-navbar-entry-color;
                         }
                     }
