--- a/addons/web/static/src/legacy/scss/modal.scss
+++ b/addons/web/static/src/legacy/scss/modal.scss
@@ -12,3 +12,9 @@
         }
     }
 }
+
+@include media-breakpoint-down(sm) {
+    &.o_modal_full .modal-dialog .modal-content .modal-header .o_subtitle {
+        color: $o-navbar-entry-color;
+    }
+}
